fixed olivers merge

--- a/2sprint/chapter_doc.tex
+++ b/2sprint/chapter_doc.tex
@@ -14,7 +14,7 @@ First, we wanted to fetch the data from Cisco MSE and send it to the aSTEP datab
 
 We implemented a significant amount of unit tests to ensure correctness of our code. Furthermore, we thoroughly documented the code to decrease future development and maintenance costs. The unit tests are described in \cref{sec:unit_test}.
 
-We looked into the possibilities for storing geographical data, and we are curently awaiting the local Cisco administrator to allow for this.
+We looked into the possibilities for storing geographical data, and we are currently awaiting the local Cisco administrator to allow for this.
 
 Finally we have described several collaborations we participated in during the sprint. These range from server administration to various meetings with different groups. This can be found in \cref{sec:collaboration}. 
 
