--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -21,4 +21,4 @@ At meetings with the database groups there have been talked about what data we w
 Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco whereas the other group would get started on the indoor API. There have been a continuous communication between our two groups to keep track of progress and difficulties. 
 
 \paragraph{UM meetings}
-There was also held a meeting with the UM group where there were discussed http vs https... \ofx{meeting with UM Jacob?}
+There was also held a meeting with the UM group where there were discussed http vs https, initially we and the UM group were not able to use https with our current setup of the RESTFUL service, we then explained our approach to aSTEP, then Alexander Krog from HotMaps apps said they had experience with this and made it possible for aSTEP to use https. This lead to the next problem making the authentication by a third part. This was done by the company lets encrypt.
