--- a/2sprint/geo_locations.tex
+++ b/2sprint/geo_locations.tex
@@ -67,7 +67,7 @@ The listing below shows the conversion between the three different types of geog
 \end{itemize}
 
 It has been requested that the data we supply for the applications are in geographical coordinates.
-As the coordinate received from Cisco MSE are in feet relative to the fixed $\{0;0\}$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of $\{0;0\}$ and the angle of the map compared to longitude and latitude. 
+As the coordinate received from Cisco MSE are in feet relative to the fixed $(0;0)$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of $(0;0)$ and the angle of the map compared to longitude and latitude. 
 
 However, by using Cisco it is not necessary to perform these calculations as there is an option of getting the positions in geographical coordinates. This requires at least three geographical coordinates on each map to be calculalted. By having geographical coordinates for at least three points, Cisco can calculate the position of each device based on the relative coordinate in comparison to the inserted locations\cite{geo_cisco}. 
 Cisco can output geographical coordinates in either the DMS of the DD format\cite{cisco_geo_type}. It has been stated from other astep groups there is a preference for the DD format, but since future applications may want the DMS or DDM format, we will implement functionality to support the conversion. \ofx{we may have to correct this later on based on what we get from Cisco}
