--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -16,7 +16,7 @@ We tested the Ibiquiti equipment, with the original firmware. At first glance we
 
 This lead to search about custom firmwares for the router that we ordered. By installing a new firmware on the router we will be able to get root access to the router and thereby manipulate the router at a lower level then the router original firmware allows, this is necessary if we not to capture every receive signal that the router gets.
 
-We did find a custom firmware for Ibiquiti but not for D-link. The sites we have looked at was: openwrt.org, polarcloud.com, dd-wrt.com, gargolye-router.com, librecmc.org and wrtrouters.com These sites covers over thousands of routers and the fact we were not able to find a custom firmware for D-link might be because of that particular model we ordered because other routers from that brands were supported, nothing conclusion was found, to why it is not covered on any of the websites because.
+We did find a custom firmware for Ibiquiti but not for D-link. The sites we have looked at were: openwrt.org, polarcloud.com, dd-wrt.com, gargolye-router.com, librecmc.org and wrtrouters.com These sites covers over thousands of routers and the fact we were not able to find a custom firmware for D-link might be because of that particular model we ordered because other routers from that brands were supported, nothing conclusion was found, to why it is not covered on any of the websites because.
 
 We ended up going with the openwrt because it supported our Ibiquiti router and allow us to gain root access and execute programs. With the new custom firmware installed we have around 8mb of memory left this put some limitation to which language we can use, our first attempt is to use a version of python called mini-python that dose not exceed the memory limit.
 
