--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -1,6 +1,14 @@
 \section{Building our own tracking system using routers and hotspots}
 This will cover the advancements that have been made in building and gather information using routers and hotspots, A list of objectives can be found in below. The goal for this is the enable us to calculate the positioning ourself and compare them to the current system Cisco.
 
+An overview of the entire system can be see below in figure \ref{fig:OwnSetup} 
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{graphics/Router-AccessPoint_Setup.pdf}
+	\label{fig:OwnSetup}
+	\caption{Illustration of how a positioning system can be setup using routers and access point that can track devices}
+\end{figure}
+
 \begin{itemize}
 	\item Buying Equipment
 	\item Test Capabilities of the Equipment
