--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -1,7 +1,7 @@
 \section{Building our own tracking system using routers and hotspots}
 This will cover the advancements that have been made in building and gather information using routers and hotspots, A list of objectives can be found in below. The goal for this is the enable us to calculate the positioning ourself and compare them to the current system Cisco.
 
-An overview of the entire system can be see below in figure \ref{fig:OwnSetup} 
+An overview of the entire system can be see below in figure \ref{fig:OwnSetup}, were one router and four access points are setup in our group rooms that cover the aSTEP groups.
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.5]{graphics/Router-AccessPoint_Setup.pdf}
@@ -10,12 +10,12 @@ An overview of the entire system can be see below in figure \ref{fig:OwnSetup}
 \end{figure}
 
 \begin{itemize}
-	\item Buying Equipment
+	\item Equipment Requirements
 	\item Test Capabilities of the Equipment
 \end{itemize}
 
-\subsection*{Buying Equipment}
-The initial requirements for the equipment is that it needs to have a wireless antenna that should at least support 2.4 GHz and optionally 5 GHz, additionally we would need two be able to setup two different ILBS, we decided to buy two brands to also analyse which of the systems performed best based on the criteria describe in section \ref{sec:monitoring}.
+\subsection*{Equipment Requirements}
+The initial requirements for the equipment, is a wireless antenna that should at least support 2.4 GHz and optionally 5 GHz, additionally we would like to be able to setup two different ILBS, we decided to buy two brands to allow us to analyse at least two ILBS also analyse which of the systems performed best based on the criteria describe in section \ref{sec:monitoring}.
 
 Based on the above requirements we found two brands, D-link and Ubiquiti. We ordered one router, two expensive access points and five cheap access points of each brand. D-link is considered to be the cheaper brand then Ubiquiti.
 
