fixed our system and added some to it

--- a/bib.bib
+++ b/bib.bib
@@ -269,3 +269,17 @@
 	note = {Accessed 30-3-2016},
 	url ={https://www.maptools.com/tutorials/lat_lon/formats}
 }
+
+@MISC{access_point_placement,
+	author = {Cisco},
+	title = {Best Practices—Location-Aware WLAN Design Considerations},
+	note = {Accessed 18-4-2016},
+	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/WiFiLBS-DG/wifich5.html#wp1051949}
+}
+
+@MISC{access_point_range,
+	author = {Cisco},
+	title = {Cisco Unified Wireless Location-Based Services},
+	note = {Accessed 18-4-2016},
+	url ={http://www.cisco.com/en/US/docs/solutions/Enterprise/Mobility/emob30dg/Locatn.html}
+}
