--- a/bib.bib
+++ b/bib.bib
@@ -283,3 +283,10 @@
 	note = {Accessed 18-4-2016},
 	url ={http://www.cisco.com/en/US/docs/solutions/Enterprise/Mobility/emob30dg/Locatn.html}
 }
+
+@MISC{HTTPS,
+	author = {Comodo},
+	title = {What is HTTPS?},
+	note = {Accessed 26-4-2016},
+	url ={https://www.instantssl.com/ssl-certificate-products/https.html}
+}
