written about the update. Added sources

--- a/bib.bib
+++ b/bib.bib
@@ -283,3 +283,15 @@
 	note = {Accessed 18-4-2016},
 	url ={http://www.cisco.com/en/US/docs/solutions/Enterprise/Mobility/emob30dg/Locatn.html}
 }
+@MISC{gson,
+	author = {Google},
+	title = {Google gson on Github.com},
+	note = {Accessed 18-4-2016},
+	url ={https://github.com/google/gson}
+}
+@MISC{jsonschematwopojo,
+	author = {Joe Littlejohn},
+	title = {jsonschema2pojo},
+	note = {Accessed 18-4-2016},
+	url ={http://www.jsonschema2pojo.org/}
+}
