--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -1,9 +1,6 @@
 \chapter{Sprint 3}\label{cha:sprint3}
-
-One chapter per development cycle (i.e., one chapter per sprint) performed in the project documenting the analysis, design, refactoring, implementation and test performed in that cycle.
-
-Each cycle may contain more or less of each of these elements.
-This chapter covers the “design of an application that handles a substantial part of this” and “development of a program that realizes the design”
-
+This sprint aims to explore the possibilities of building our own tracking system as well as updating the restful intermediate service. Furthermore, we will examine our systems in regards to the aspect of security. 
 \input{3sprint/trackingsystem}
+\input{3sprint/update_rest}
 
+During this sprint we examined the possibility of building a small tracking system with only a tree and our bare hands. We deployed an update for the intermediate service communicating with MSE, fixing several issues and creating support for global coordinates. 
