--- a/bib.bib
+++ b/bib.bib
@@ -290,3 +290,13 @@
 	note = {Accessed 26-4-2016},
 	url ={https://www.instantssl.com/ssl-certificate-products/https.html}
 }
+
+@article{Hash_def,
+	author = {Alfred J. Menezes, Paul C. van Oorschot, Scott A. Vanstone},
+	title = {HANDBOOK of APPLIED CRYPTOGRAPHY},
+	year    = {1996},
+	pages   = {33 - 33},
+	note = {Accessed 27-4-2016},
+	url ={https://books.google.dk/books?hl=da&lr=&id=MhvcBQAAQBAJ&oi=fnd&pg=PP1&dq=cryptography+hash&ots=AtAEEo2Orx&sig=Ym4eI_DmTvdlwEQl9juD3ur4fhE&redir_esc=y#v=onepage&q&f=false}
+}
+
