--- a/4sprint/security.tex
+++ b/4sprint/security.tex
@@ -28,6 +28,14 @@ hash.hashCode();
 \end{lstlisting}
 
 
+%Hash function are most commonly used to store a users password or other sensitive data. I functions as a one way function, when a message is hashed it can not be reversed again. The formal definition is shown below:
+
+%\begin{quote}
+	%\textit{'A hash function is a computationally efficient function mapping binary strings of arbitrary length to binary strings of some fixed length, called hash-values.'\cite{Hash_def}}
+%\end{quote}
+
+%When using a hash function properly, you add a random generate string that extends the original message, the generate string is called a salt and make the hash function more secure.
+
 \subsection*{Adding servers to client}
 \subsection*{Accessors}
 \subsection*{Hard-coded passwords}
