--- a/4sprint/security.tex
+++ b/4sprint/security.tex
@@ -1,6 +1,6 @@
 \section{Security considerations}
 In order to increase security in our system, different considerations was made. These considerations are made in order to make it more difficult for outsiders to access the system as well hide sensitive user information except for the mac-address.
-
+\ofx{tie this to sprint1 security}
 \subsection*{HTTPS and Certificates} 
 %  HTTPS and SSL certificate. May want to talk more about where we could use it in our system
 To increase security against unauthorised personal a HTTPS connection could be established. HTTPS is short for \textit{Hyper Text Transfer Protocol Secure} and is the secure form of HTTP. With HTTP everything send as plain text and can be read by anyone who access the connection, but what makes HTTPS secure is that this pure text is encrypted. This means that if someone gains access the connection they would not be able to read the information. A secure connection is therefore very important on sites that handles sensitive information such as CPR-numbers or credit card information and this can be achieved by using HTTPS\cite{HTTPS}.
