security and move to sprint3

--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -4,7 +4,7 @@ This section will include the advancements made in building and gathering of inf
 \begin{itemize}
 	\item Equipment Requirements
 	\item Test Capabilities of the Router 
-	\item Test Capabilities of the Access Points\ofx{is this all?}
+	\item Test Capabilities of the Access Points
 \end{itemize}
 
 
