forgot thit one

--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -2,5 +2,7 @@
 This sprint aims to explore the possibilities of building our own tracking system as well as updating the restful intermediate service. Furthermore, we will examine our systems in regards to the aspect of security. 
 \input{3sprint/trackingsystem}
 \input{3sprint/update_rest}
+\input{3sprint/security}
 
+\section{Sprint review}
 During this sprint we examined the possibility of building a small tracking system with only a tree and our bare hands. We deployed an update for the intermediate service communicating with MSE, fixing several issues and creating support for global coordinates. 
