--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -1,5 +1,5 @@
 \section{Building our own tracking system using routers and hotspots}
-This section will include the advancements made in building and gathering of information about using routers and hotspots to make our own ILBS, a list of objectives can be seen below. The goal for this is enabling us to calculate the position of ourself in geographical coordinates and compare them to the coordinate provided by Cisco.
+This section will cover the advancements made in building and gathering information about routers and hotspots to make our own Indoor Location-Based System (ILBS). A list of objectives can be seen below. The primary goal is enabling us to calculate our position in geo-coordinates, in order to compare it with the coordinates provided by Cisco MSE.
 
 \begin{itemize}
 	\item Equipment Requirements
@@ -7,18 +7,15 @@ This section will include the advancements made in building and gathering of inf
 	\item Test Capabilities of the Access Points
 \end{itemize}
 
-
 \subsection*{Equipment Requirements}
-The initial requirements for the equipment, is a wireless antenna capable of supporting 2.4 GHz and optionally 5 GHz. It would be advantageously if we set up two different ILBS for the sake of comparison. We decided to buy two brands allowing us to analyse at least two ILBS and thus conclude which of the systems performed best, based on the criteria describe in section \ref{sec:monitoring}.
+The initial requirement for the equipment is that it comes with a wireless antenna supporting 2.4 GHz. It would be advantageous if we set up two different ILBS for the sake of comparison. We decided to buy two brands, allowing us to analyse two ILBS and thus conclude which of the systems performed best, based on the criteria described in section \ref{sec:monitoring}.
 
-Based on the above requirement we found two brands, Ubiquiti and D-link which in comparison is considered the cheaper brand. We ordered one router, two expensive and five cheap access points of each brand.
+Based on the above requirement we found two brands, Ubiquiti and D-link, the latter of which is considered the cheaper brand. We ordered one router, two expensive access points and five cheap access points from each brand.
 
 \subsection*{The physical setup}\ofx{we may want to move this?}
-Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for your system. They recommend that there are placed an access point in each corner of the building and some along the perimeter, in addition if the building is large enough there should be placed some within the perimeter that can form a sub-perimeter inside which there may be additional access points, this is illustrated in \cref{access_placement} on which the red circles are access points. This means the perimeter established by the outer most access points should encapsulate the entire floor. Everything on this perimeter is called the \textit{hull}\cite{access_point_placement}.
+Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for your system. They recommend that there is an access point in each corner of the building and some along the perimeters. In addition, if the building is large enough, access points should be placed within the perimeter to form a sub-perimeter which itself may contain a sub-perimeter and so on. This is illustrated in \cref{access_placement}, in which the red circles are access points. The perimeter established by the outer-most access points should encapsulate the entire floor. Everything on this perimeter is called the \textit{hull}\cite{access_point_placement}.
 
-Each access point should be place 50-70 feet away from each other in order to get a high precision without a lot of unnecessary overlap\cite{access_point_range}.
- 
-The placement of the access points in \cref{fig:OwnSetup} is based on this design. As it can be seen they are placed in a square to symbolize corners and the router in the middle, in our small system.
+Each access point should be place 50-70 feet away from each other in order to get a high precision without interference and unnecessary overlap\cite{access_point_range}.
 
 \begin{figure}[H]
 	\centering
@@ -27,7 +24,8 @@ The placement of the access points in \cref{fig:OwnSetup} is based on this desig
 	\caption{Illustration of how access points should be placed.}
 \end{figure}
 
-An overview of our system can be seen in \cref{fig:OwnSetup}. One router is set up in the middle and four access points are set up in our group rooms, such that it covers three group rooms.
+An overview of our system setup can be seen in \cref{fig:OwnSetup}. This setup follows the previous design guidelines. One router is set up in the middle and four access points are set up in our group rooms, such that it covers three group rooms.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.5]{graphics/Router-AccessPoint_Setup.pdf}
@@ -36,14 +34,14 @@ An overview of our system can be seen in \cref{fig:OwnSetup}. One router is set 
 \end{figure}
 
 \subsection*{Test Capabilities of the Equipment}
-We tested the Ibiquiti equipment, with the original firmware. At first glance we are able to get transmission(TX) and receive(RX) signals of connected devices, unfortunately we do not receive the signals from devices not connected to the router. It was attempted to use the routers terminal which did not yield any results due to restricted access.
+We tested the Ubiquiti equipment, with the original firmware. At first glance we are able to get transmission(TX) and receive(RX) signals of connected devices. Unfortunately we do not receive the signals from devices not connected to the network. It was attempted to use the routers terminal which did not yield any results due to restricted access.
 
-This caused us to research custom firmware for the router. By installing new firmware on the router we will be able to get root access to the router and thereby manipulate it at a lower level than the routers original firmware allows, this is necessary if we are to capture every receive signal the router gets.
+This caused us to research custom firmware for the router. By installing new firmware on the router we will be able to get root access to the router, and thereby manipulate it at a lower level than the routers original firmware allows. This is necessary if we are to capture every RX signal the router gets.
 
-We did find a custom firmware for Ibiquiti, however not for D-link. The searched sites were: openwrt.org{cite?}, polarcloud.com\ofx{cite?}, dd-wrt.com, gargolye-router.com\ofx{cite?}, librecmc.org\ofx{cite?} and wrtrouters.com\ofx{cite?}. These sites covers thousands of routers and the fact that we were not able to find a custom firmware for D-link might be because that the particular model we ordered\ofx{something is missing} because other routers from the same brand is supported. No conclusion was found, to why it is not covered on any of the websites.
+We did find custom firmware for Ubiquiti, however not for D-link. The searched sites were: openwrt.org\sfx{cite?}, polarcloud.com\ofx{cite?}, dd-wrt.com\sfx{cite?}, gargolye-router.com\ofx{cite?}, librecmc.org\ofx{cite?} and wrtrouters.com\ofx{cite?}. These sites cover thousands of routers and the fact that we were not able to find a custom firmware for D-link might be because the particular model we ordered\ofx{something is missing} because other routers from the same brand is supported. No conclusion was found as to why it is not covered on any of the websites.
 
-We ended up utilizing the openwrt because it supports our Ibiquiti router and allows us to gain root access and execute programs. With the new custom firmware installed we have about 8Mb of memory left on the router, this put some limitations to which language we can use, our first attempt is to use a version of python called mini-python that dose not exceed the memory limit.
+We ended up utilizing the openwrt because it supports our Ubiquiti router and allows us to gain root access and execute programs. With the new custom firmware installed there is roughly 8Mb of free memory left on the router. This put some limitations on which language we can use. Our first attempt is to use a version of python called Mini-Python that does not exceed the memory limit.
 
-A program is constructed allowing us to listen on different types of networks such as LAN and WAN, this is done using the socket library. We were however not able to import the socket library which was required, to run our program on the router.
+A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to do this either due to space consumption.
 
 /jfx{Nuværende konklusion, vi kan fange pakker, hvis devicen er forbundet til vores netwærk eller de selv har tænkt for internet deling. Det er dog ikke muligt at få RSSI (signal styrke), der er ikke fundet nogen defintive årsag til dette, men formoder at det kan skyldes driverne på routeren (openwrt).}
