--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -13,7 +13,7 @@ The initial requirement for the equipment is that it comes with a wireless anten
 Based on the above requirement we found two brands, Ubiquiti and D-link, the latter of which is considered the cheaper brand. We ordered one router, two expensive access points and five cheap access points from each brand.
 
 \subsection*{The physical setup}\ofx{we may want to move this?}
-Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for your system. They recommend that there is an access point in each corner of the building and some along the perimeters. In addition, if the building is large enough, access points should be placed within the perimeter to form a sub-perimeter which itself may contain a sub-perimeter and so on. This is illustrated in \cref{access_placement}, in which the red circles are access points. The perimeter established by the outer-most access points should encapsulate the entire floor. Everything on this perimeter is called the \textit{hull}\cite{access_point_placement}.
+Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for your system. They recommend that there is an access point in each corner of the building and some along the perimeters. In addition, if the building is large enough, access points should be placed within the perimeter to form a sub-perimeter which itself may contain a sub-perimeter and so on. This is illustrated in \cref{access_placement}, in which the red circles are access points. The perimeter established by the outer-most access points should encapsulate the entire floor, as illustrated by the blue line and the sub-perimeter by the red line. Everything on this perimeter is called the \textit{hull}\cite{access_point_placement}.
 
 Each access point should be place 50-70 feet away from each other in order to get a high precision without interference and unnecessary overlap\cite{access_point_range}.
 
